--- a/src/index.css
+++ b/src/index.css
@@ -13,5 +13,5 @@ html, body, #root {
 }
 
 body {
-  cursor: none;
+  cursor: default;
 }
